@@ -2,35 +2,31 @@ package com.igor.bankcardmanagement.controller;
 
 import com.igor.bankcardmanagement.dto.CardDto;
 import com.igor.bankcardmanagement.entity.Card;
-import com.igor.bankcardmanagement.entity.User;
 import com.igor.bankcardmanagement.mapper.CardMapper;
 import com.igor.bankcardmanagement.service.CardService;
-import com.igor.bankcardmanagement.service.UserService;
-import jakarta.validation.Valid;
-import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/cards")
-@RequiredArgsConstructor
 public class CardController {
 
     private final CardService cardService;
     private final CardMapper cardMapper;
-    private final UserService userService;
+
+    public CardController(CardService cardService, CardMapper cardMapper) {
+        this.cardService = cardService;
+        this.cardMapper = cardMapper;
+    }
 
     @PostMapping
-    public ResponseEntity<CardDto> create(@Valid @RequestBody CardDto cardDto) {
-        User user = userService.getById(cardDto.getUserId());
-        if (user == null) return ResponseEntity.badRequest().build();
-        Card card = cardMapper.toEntity(cardDto, user);
-        Card saved = cardService.create(card);
-        return ResponseEntity.ok(cardMapper.toDto(saved));
+    public ResponseEntity<CardDto> create(@RequestBody Card card) {
+        CardDto dto = cardMapper.toDto(cardService.create(card));
+        return ResponseEntity.status(HttpStatus.CREATED).body(dto);
     }
 
     @GetMapping("/{id}")
@@ -41,19 +37,17 @@ public class CardController {
     }
 
     @GetMapping
-    public ResponseEntity<List<CardDto>> getAll() {
-        List<CardDto> list = cardService.getAll().stream()
+    public List<CardDto> getAll() {
+        return cardService.getAll().stream()
                 .map(cardMapper::toDto)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(list);
+                .toList();
     }
 
     @GetMapping("/user/{userId}")
-    public ResponseEntity<List<CardDto>> getByUserId(@PathVariable Long userId) {
-        List<CardDto> list = cardService.getByUserId(userId).stream()
+    public List<CardDto> getByUserId(@PathVariable Long userId) {
+        return cardService.getByUserId(userId).stream()
                 .map(cardMapper::toDto)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(list);
+                .toList();
     }
 
     @PutMapping("/{id}/balance")
@@ -69,4 +63,5 @@ public class CardController {
         return ResponseEntity.noContent().build();
     }
 }
+
 
